<?xml version="1.0"?>
<package format="2">
  <name>uarm</name>
  <version>1.0.0</version>
  <description>
     uarm velocity driver.
 </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lorenz.halt@ipa.fraunhofer.de">lth</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->

  <buildtool_depend>catkin</buildtool_depend>

</package>
